plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'umc.teumteum'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

jacoco {
	toolVersion = "0.8.10"
}


def coverageMin       = (project.findProperty('coverage.min') ?: '0.60') as BigDecimal
def coverageBranchMin = (project.findProperty('coverage.branchMin') ?: '0.30') as BigDecimal

tasks.named('jacocoTestCoverageVerification') {
	dependsOn tasks.named('test')
	violationRules {
		rule {
			element = 'BUNDLE'
			limit {
				counter = 'LINE'
				value   = 'COVEREDRATIO'
				minimum = coverageMin
			}
			limit {
				counter = 'BRANCH'
				value   = 'COVEREDRATIO'
				minimum = coverageBranchMin
			}
		}
	}
}


tasks.named('check') {
	dependsOn tasks.named('jacocoTestCoverageVerification')
}

dependencies {
	// Spring Basic
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'com.h2database:h2'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-inline:5.2.0'

	// Swagger UI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.1'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// S3
	implementation platform('software.amazon.awssdk:bom:2.25.10')
	implementation 'software.amazon.awssdk:auth'
	implementation 'software.amazon.awssdk:s3'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Levenshtein
	implementation 'org.apache.commons:commons-text:1.10.0'

	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.5.0'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Prometheus, Grafana
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

task copyYml(type: Copy){
	copy{
		from './config'
		include '*.properties'
		into 'src/main/resources'
	}
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs += [
			"-Djdk.attach.allowAttachSelf=true",
			"-XX:+EnableDynamicAgentLoading"
	]
	finalizedBy(tasks.jacocoTestReport)
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')

	executionData.from = fileTree(dir: "$buildDir", includes: [
			"jacoco/test.exec",
			"jacoco/test/*.exec"
	]).filter { it.exists() && it.length() > 0 }

	reports {
		xml.required.set(true)
		html.required.set(true)
		csv.required.set(false)
	}
}

